# drinks-shop

./: README.md  db.sqlite3  manage.py  pyproject.toml
drinks/: admin.py  models.py  tests.py  urls.py
drinks/api/: serializers.py  viewset.py
drinks/migrations/: 0001_initial.py
drinks_shop/: asgi.py  settings.py  urls.py  wsgi.py
